--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -19,8 +19,8 @@ en:
       locked: 'Your account is locked.'
       invalid: 'Invalid email or password.'
       invalid_token: 'Invalid authentication token.'
-      timeout: 'Your session expired, please sign in again to continue.'
-      inactive: 'Your account was not activated yet.'
+      timeout: 'Your session expired, please sign in to continue.'
+      inactive: 'Your account has not been activated yet.'
     sessions:
       signed_in: 'Signed in successfully.'
       signed_out: 'Signed out successfully.'
@@ -34,9 +34,9 @@ en:
       confirmed: 'Your account was successfully confirmed. You are now signed in.'
     registrations:
       signed_up: 'Welcome! You have signed up successfully.'
-      inactive_signed_up: 'You have signed up successfully. However, we could not sign you in because your account is %{reason}.'
-      updated: 'You updated your account successfully.'
-      destroyed: 'Bye! Your account was successfully cancelled. We hope to see you again soon.'
+      inactive_signed_up: 'Thank you for signing up!  Please check your email and click the confirmation link to complete your registration, and start smacking!'
+      updated: 'Account updated successfully.'
+      destroyed: 'Your account was successfully cancelled. We hope to see you again soon!'
     unlocks:
       send_instructions: 'You will receive an email with instructions about how to unlock your account in a few minutes.'
       unlocked: 'Your account was successfully unlocked. You are now signed in.'
