--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,6 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  unauthorized:
+    manage:
+      all: 'You must be signed-up/signed-in to use this function'
